@@ -1579,6 +1579,7 @@ func_all_modules ()
   func_begin_table
   func_module diacrit
   func_module getline
+  func_module getnline
   func_module linebuffer
   func_module obstack
   func_module hash-pjw
