@@ -1,0 +1,15 @@
+# getnline.m4 serial 1
+dnl Copyright (C) 2003 Free Software Foundation, Inc.
+dnl This file is free software, distributed under the terms of the GNU
+dnl General Public License.  As a special exception to the GNU General
+dnl Public License, this file may be distributed as part of a program
+dnl that contains a configuration script generated by Autoconf, under
+dnl the same distribution terms as the rest of that program.
+
+AC_DEFUN([gl_GETNLINE],
+[
+  dnl Prerequisites of lib/getnline.h.
+  AC_REQUIRE([gt_TYPE_SSIZE_T])
+  dnl Prerequisites of lib/getnline.c.
+  AC_REQUIRE([AC_HEADER_STDC])
+])
