@@ -1,3 +1,13 @@
+2003-07-17  Bruno Haible  <bruno@clisp.org>
+
+	* getnline.h: New file.
+	* getnline.c: New file.
+	* getndelim2.c: New file, extracted from getline.c.
+	(getndelim2): Renamed from getdelim2, with added nmax argument.
+	* getline.c: Include getndelim2.c.
+	(getdelim2): Moved out to getndelim2.c.
+	(getline, getdelim): Update.
+
 2003-07-15    <karl@gnu.org>
 
 	* vasnprintf.c: update from gettext.
