@@ -1,3 +1,7 @@
+2003-07-17  Bruno Haible  <bruno@clisp.org>
+
+	* getnline.m4: New file.
+
 2003-07-14  Simon Josefsson  <jas@extundo.com>
 
 	* mempcpy.m4: New file.
